--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.0.2
-gunicorn==20.1.0
-qrcode==6.1
-pyzbar==0.1.8
-opencv-python-headless==4.5.3.56
-numpy==1.21.2
+Flask
+gunicorn
+qrcode
+pyzbar
+opencv-python-headless
+numpy
 io
